load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")



nodejs_binary(
    name = "stackblitz",
    data = [
        "@npm//jsdom",
    ],
    entry_point = "@npm//@angular/docs/pipeline:stackblitz.mjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "zip",
    entry_point = "@npm//@angular/docs/pipeline:zip.mjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "markdown",
    data = [
        "@npm//@angular/build-tooling/bazel/browsers/chromium:chromium-for-generation",
        "@npm//jsdom",
        "@npm//mermaid",
        "@npm//playwright-core",
    ],
    entry_point = "@npm//@angular/docs/pipeline:guides.mjs",
    env = {
        "CHROME_BIN": "$(CHROMIUM)",
    },
    toolchains = [
        "@npm//@angular/build-tooling/bazel/browsers/chromium:toolchain_alias",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "markdown_no_mermaid",
    data = [
        "@npm//jsdom",
    ],
    entry_point = "@npm//@angular/docs/pipeline:guides-no-mermaid.mjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "playground",
    entry_point = "@npm//@angular/docs/pipeline:playground.mjs",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "tutorial",
    entry_point = "@npm//@angular/docs/pipeline:tutorial.mjs",
    visibility = ["//visibility:public"],
)
